--- a/scss/global.scss
+++ b/scss/global.scss
@@ -101,7 +101,7 @@ header {
   margin: 0px auto 0px auto;
   padding-bottom: .4em;
   vertical-align: middle;
-  color: black;
+  color: $LinkColor;
   img {
     width: 140pt;
   }
